Sun Nov 10 19:05:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- fix a bug introduced after removing terminator from row
	  (discovered with ElectricFence)

Sun Nov 10 18:33:11 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/tds/config.c src/tds/threadsafe.c:
	* src/tds/write.c:
	- small fix to a fast change
	- use tds_get_homedir in odbc code
	- remove a warning

Sun Nov 10 18:21:32 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in include/tds.h src/tds/config.c src/tds/threadsafe.c:
	- add tds_get_homedir function for reading home directory location
	  in a safer way and use it

Sun Nov 10 17:17:44 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/config.c src/tds/convert.c:
	* src/tds/iconv.c src/tds/login.c src/tds/token.c:
	- remove various FIXME in code

Sun Nov 10 13:46:55 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/t0001.c:
	- fill buffer for see other possible errors

Sun Nov 10 13:38:58 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c src/tds/query.c  src/tds/token.c:
	- fix some FIXME in code
	* src/tds/read.c src/tds/write.c:
	- use chunk conversion for unicode<->ascii to avoid memory problems

Sun Nov 10 11:52:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/server/login.c src/tds/iconv.c src/tds/token.c:
	- unicode2ascii and tds_get_string never terminate output strings
	- string in row are not zero terminated. this safe a bit of unused 
	  space

Fri Nov  8 15:22:51 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt:
	- Update status of dbcolutype() and BCP_SETL().

Fri Nov  8 20:06:36 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/odbc/odbc.c:
	* src/tds/mem.c src/tds/query.c src/tds/token.c:
	- put blob related fields in a new TDSBLOBINFO structure and